Add stylesheet to page
- Linked stylesheet
- Added basic styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
 	<title>Landing Page</title>
 </head>
 <body>
@@ -56,7 +57,7 @@
 
 		<div class="bottom">
 			<div class="modal">
-				<div class="header">Call to action! It's time!</div>
+				<div>Call to action! It's time!</div>
 				<p>Sign up for our product by clicking that button right over there!</p>
 				<button>Sign up</button>
 			</div>
