Add colors css to page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<ul>
-			<li><a href="#">Header Logo</a></li>
+			<li><a href="#" class="logo">Header Logo</a></li>
 			<li><a href="#">Header Link One</a></li>
 			<li><a href="#">Header Link Two</a></li>
 			<li><a href="#">Header Link Three</a></li>
@@ -19,15 +19,15 @@
 	<div class="body">
 		<div class="top">
 			<div class="container">
-				<p>This website is awesome</p>
-				<p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-				<button>Sign up</button>
+				<p class="title">This website is awesome</p>
+				<p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+				<button class="button">Sign up</button>
 				<img src="" alt="Placeholder Image">
 			</div>
 		</div>
 
 		<div class="middle">
-			<p>Some random information.</p>
+			<p class="info-title">Some random information.</p>
 			<div class="container">
 				<div class="info">
 					<img src="" alt="Placeholder">
@@ -50,8 +50,8 @@
 				</div>
 		</div>
 
-		<div class="middle-2">
-			<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
+		<div class="quote">
+			<p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
 			<p>-Thor, God of Thunder</p>
 		</div>
 
