--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 </head>
 <body>
 	<header>
+		<div class="logo">Header Logo</div>
 		<ul>
-			<li><a href="#" class="logo">Header Logo</a></li>
-			<li><a href="#">Header Link One</a></li>
-			<li><a href="#">Header Link Two</a></li>
-			<li><a href="#">Header Link Three</a></li>
+			<li><a href="#">header link one</a></li>
+			<li><a href="#">header link two</a></li>
+			<li><a href="#">header link three</a></li>
 		</ul>
 	</header>
 
 	<div class="body">
 		<div class="top">
 			<div class="container">
-				<p class="title">This website is awesome</p>
-				<p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-				<button class="button">Sign up</button>
-				<img src="" alt="Placeholder Image">
+				<div class="title">This website is awesome</div>
+				<div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
 			</div>
+			<button class="button">Sign up</button>
+			<img src="" alt="Placeholder Image">
 		</div>
 
 		<div class="middle">
 			<p class="info-title">Some random information.</p>
-			<div class="container">
+			<div class="info-container">
 				<div class="info">
 					<img src="" alt="Placeholder">
 					<p>This is some subtext under an illustration or image.</p>
@@ -52,13 +52,15 @@
 
 		<div class="quote">
 			<p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
-			<p>-Thor, God of Thunder</p>
+			<p class="quote-author">-Thor, God of Thunder</p>
 		</div>
 
 		<div class="bottom">
 			<div class="modal">
-				<div>Call to action! It's time!</div>
-				<p>Sign up for our product by clicking that button right over there!</p>
+				<div class="text">
+					<div>Call to action! It's time!</div>
+					<div>Sign up for our product by clicking that button right over there!</div>
+				</div>
 				<button>Sign up</button>
 			</div>
 		</div>
