Add image to webpage
- Linked image to html
- Note: Remember to give sources on the image!

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
 			<div class="container">
 				<div class="title">This website is awesome</div>
 				<div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+				<button class="button">Sign up</button>
 			</div>
-			<button class="button">Sign up</button>
-			<img src="" alt="Placeholder Image">
+			<img class="image" src="pic.webp" alt="Placeholder Image">
 		</div>
 
 		<div class="middle">
 			<p class="info-title">Some random information.</p>
 			<div class="info-container">
 				<div class="info">
-					<img src="" alt="Placeholder">
+					<img src="cat.png" alt="Placeholder">
 					<p>This is some subtext under an illustration or image.</p>
 				</div>
 
 				<div class="info">
-					<img src="" alt="Placeholder">
+					<img src="cat.png" alt="Placeholder">
 					<p>This is some subtext under an illustration or image.</p>
 				</div>
 
 				<div class="info">
-					<img src="" alt="Placeholder">
+					<img src="cat.png" alt="Placeholder">
 					<p>This is some subtext under an illustration or image.</p>
 				</div>
 
 				<div class="info">
-					<img src="" alt="Placeholder">
+					<img src="cat.png" alt="Placeholder">
 					<p>This is some subtext under an illustration or image.</p>
 				</div>
 		</div>
@@ -61,7 +61,7 @@
 					<div>Call to action! It's time!</div>
 					<div>Sign up for our product by clicking that button right over there!</div>
 				</div>
-				<button>Sign up</button>
+				<button class="modal-button">Sign up</button>
 			</div>
 		</div>
 	</div>
